fix: update axis border visibility and label styles in chart components for improved readability

--- a/src/index.css
+++ b/src/index.css
@@ -184,7 +184,7 @@
   @apply !bg-primary;
 }
 
-.apexcharts-text tspan {
+.apexcharts-xaxis-texts-g>text {
   @apply !fill-base-content;
 }
 
